--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
 
 env:
   applicationfolder: spring-boot-hello-world-example
-  AWS_REGION: US East (N. Virginia)
+  AWS_REGION: US East (N. Virginia) Region
   S3BUCKET: codedeploystack-webappdeploymentbucket-1u2p6al1a5opo
 
 
